   * Reorganized AI macro library
   * Added 'move leader to target' candidate action
   * Added recall capabilities to default ai.
   * Added recall formula ai function and ai.recall_list formula ai attribute.
   * Modified default ai recruitment to recall good units from recall list.
   * Modified default ai recruitment to consider enemy potential recruits during recruitment.
 * Graphics:
   * New portraits for Merman Spearman, Bat, Merman Netcaster
   * Added a couple of missing frames for the Inferno Drake
 * Language and i18n:
   * Updated translations: Czech, Dutch, Estonian, Finnish, French, German,
     Lithuanian, Serbian, Spanish.
   * New translations: Vietnamese
 * Multiplayer:
   * New map: 4p Ruins of Terra-Dwelve
 * Music and sound effects:
   * Added new music track, "Into the Shadows" by Tyler Johnson
   * Fixed bug #14239 (check_fogged ignored by sound sources)
   * Implemented FR #14246 (check_shrouded= for sound sources)
 * Units:
   * Changed the Drake Glider movetype to give 40% defense almost everywhere.
   * Gave the Fire Dragon 100% fire resistance.
 * User interface:
   * new gamestate inspector debug dialog (via 'inspect' command
     and '[inspect]' tag)
   * Rename easy_close to click_dismiss
   * Automatically try to resolve blocked multi-turn moves
   * Better visually differentiate name, type and race in sidebar
   * Add colorized terrain defense info in sidebar
   * In attack dialog, split damages and chance to hit and color the later.
 * WML engine:
   * Fix silent=yes for objectives
   * Allow [story] [part] blocks to specify the title box alignment
     with title_alignment=
   * Implemented FR #14246 (visible_in_shroud= for [label])
   * Modified Lua handling of action handlers and WML objects.
 * Miscellaneous and bugfixes:
   * Fix broken "Skip Ai moves" option.
   * Changed upload log format and defaulted the new uploader.
   * Fix bug #13268 (corrupted replays due to undo of recall/dismiss)